<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_second">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textSize="20dp"
        android:padding="20dp"/>

    <ImageView
        android:id="@+id/img_acitivty_2"
        android:src="@drawable/blank_profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/welcome"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:layout_below="@id/img_acitivty_2"
        android:background="@drawable/border"
        />

    <LinearLayout
        android:id="@+id/submit_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/inputName">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputName"
            android:text="@string/submit"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>