<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_profile"
        android:src="@drawable/blank_profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/username"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_keluar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keluar"/>

    <Button
        android:id="@+id/btn_move_to_activity_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_activity_2"/>

</LinearLayout>