<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".activity_third">

    <androidx.constraintlayout.widget.Guideline
        android:maxHeight="0.3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="20dp"
        android:background="@color/purple"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:padding="8dp"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@drawable/border"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/login_txt"
        />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/border"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/input_username"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        android:layout_marginTop="32dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>